--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
   color-scheme: light dark;
   color: rgba(51, 48, 48, 0.87);
-  background-color: #306568;
+  background-color: #6acb8fc0;
 
 
 }
